--- a/kwitter.html
+++ b/kwitter.html
@@ -19,11 +19,11 @@
 </h1>
 	<div class="col-lg-4 col-md-6 col-sm-6 col-xs-11 login_div">
 	<img src="http://pluspng.com/img-png/png-logo-design-web-design-ledger-426.png" class="logo">
-		<h3 >See what is happening in the world right now</h3>
+		<h3>See what is happening in the world right now</h3>
 		<h4 >Join Kwitter today</h4>
 		<div class="form-group">
 		  <label >User Name:</label>
-		  <input type="text" id="username" class="form-control" placeholder="username">
+		  <input type="text" id="user_name" class="form-control" placeholder="username">
 
 		</div>
 		<button id="login_button" class="btn btn-primary"  onclick="adduser()" >Log in</button>
